<!--
  Copyright 2014 Hong Minhee

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Pixiv for Muzei</string>
    <string name="source_name">Pixiv</string>
    <string name="source_description"><!--
    -->Sourcing artworks from Pixiv for Muzei live wallpaper app.</string>
    <string name="pref_changeInterval">Change interval</string>
    <string name="pref_changeInterval_default">180</string>
    <string name="pref_onlyWifi">Only over WIFI</string>
    <string name="pref_useAuth">Use authorization</string>
    <string name="pref_loginId">Login ID</string>
    <string name="pref_loginPassword">Login Password</string>
    <string name="pref_updateMode">Update mode</string>
    <string name="pref_updateMode_default">daily_rank</string>
</resources>
