<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="pref_useAuth"
        android:title="@string/pref_useAuth"
        android:dialogTitle="@string/pref_useAuth"
        android:persistent="true" />
    <EditTextPreference
        android:key="pref_loginId"
        android:title="@string/pref_loginId"
        android:dialogTitle="@string/pref_loginId"
        android:persistent="true"
        android:dependency="pref_useAuth" />
    <EditTextPreference
        android:key="pref_loginPassword"
        android:title="@string/pref_loginPassword"
        android:dialogTitle="@string/pref_loginPassword"
        android:persistent="true"
        android:dependency="pref_useAuth"
        android:password="true" />
    <com.pixiv.muzei.pixivsource.settings.SummariedListPreference
        android:key="pref_updateMode"
        android:title="@string/pref_updateMode"
        android:dialogTitle="@string/pref_updateMode"
        android:entries="@array/pref_updateMode_entries"
        android:entryValues="@array/pref_updateMode_entryValues"
        android:defaultValue="@string/pref_updateMode_default"
        android:persistent="true" />
</PreferenceScreen>
